--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
                                 <h6 class="text-church-secondary">Monthly Tithes</h6>
                                 <h3 class="text-church-secondary">{{tithes_total}} Kes</h3>
                             </div>
-                            <i class="fas fa-hand-holding-heart stats-icon text-church-gold"></i>
+                            <i class="fas fa-church stats-icon text-church-gold"></i>
                         </div>
                         <div class="mt-2">
                             <span class="text-success"><i class="fas fa-arrow-up"></i> 8.1%</span>
@@ -47,7 +47,7 @@
                                 <h6 class="text-church-primary">Department Savings</h6>
                                 <h3 class="text-church-primary">{{total_department_savings}} Kes.</h3>
                             </div>
-                            <i class="fas fa-clipboard-check stats-icon text-church-gold"></i>
+                            <i class="fas fa-piggy-bank stats-icon text-church-gold"></i>
                         </div>
                         <div class="mt-2">
                             <span class="text-danger"><i class="fas fa-arrow-down"></i> 2.3%</span>
@@ -65,7 +65,7 @@
                                 <h6 class="text-church-secondary">Total Offerings</h6>
                                 <h3 class="text-church-secondary">{{total_offerings}} Kes</h3>
                             </div>
-                            <i class="fas fa-donate stats-icon text-church-gold"></i>
+                            <i class="fas fa-hand-holding-heart stats-icon text-church-gold"></i>
                         </div>
                         <div class="mt-2">
                             <span class="text-success"><i class="fas fa-arrow-up"></i> 12.4%</span>
@@ -83,7 +83,7 @@
                                 <h6 class="text-church-secondary">Projects Contributions</h6>
                                 <h3 class="text-church-secondary">{{projects_contributions}} Kes</h3>
                             </div>
-                            <i class="fas fa-donate stats-icon text-church-gold"></i>
+                            <i class="fas fa-hammer stats-icon text-church-gold"></i>
                         </div>
                         <div class="mt-2">
                             <span class="text-success"></span>
@@ -101,7 +101,7 @@
                                 <h6 class="text-church-secondary">Project Pledges</h6>
                                 <h3 class="text-church-secondary">{{projects_pledges}} Kes</h3>
                             </div>
-                            <i class="fas fa-donate stats-icon text-church-gold"></i>
+                            <i class="fas fa-handshake stats-icon text-church-gold"></i>
                         </div>
                         <div class="mt-2">
                             <span class="text-success"></span>
