--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -26,20 +26,12 @@
                 <ul class="collapse submenu">
                     <li class="nav-item"><a href="{% url 'branches' %}" class="nav-link d-flex align-items-center gap-2"><i class="fas fa-map-marker-alt"></i> Branches</a></li>
                     <li class="nav-item"><a href="{% url 'members' %}" class="nav-link d-flex align-items-center gap-2"><i class="fas fa-user-friends"></i> Members</a></li> 
+                    <li><a href="{% url 'partners' %}" class="nav-link d-flex align-items-center gap-2"><i class="fas fa-handshake me-2"></i>Church Partners</a></li>
+                    <li><a href="{% url 'departments' %}" class="nav-link d-flex align-items-center gap-2"><i class="fas fa-sitemap me-2"></i>Departments</a></li>
                 </ul>
             </li>
 
             <!-- Finance Section -->
-            <li>
-                <a href="#" class="dropdown-toggle" data-bs-toggle="collapse" aria-expanded="false">
-                    <i class="fas fa-sitemap icon"></i>
-                    <span class="link-text">Departments</span>
-                </a>
-                <ul class="collapse submenu">
-                    <li class="nav-item"><a href="{% url 'departments' %}" class="nav-link d-flex align-items-center gap-2"><i class="fas fa-sitemap"></i> Departments</a></li>
-                    <li class="nav-item"><a href="{% url 'department-savings' %}" class="nav-link d-flex align-items-center gap-2"><i class="fas fa-piggy-bank"></i> Department Savings</a></li>
-                </ul>
-            </li>
             <li>
                 <a href="#" class="dropdown-toggle" data-bs-toggle="collapse" aria-expanded="false">
                     <i class="fas fa-dollar-sign icon"></i>
@@ -50,21 +42,12 @@
                     <li><a href="{% url 'offerings' %}" class="nav-link"><i class="fas fa-hand-holding-heart me-2"></i>Offerings</a></li>
                     <li><a href="{% url 'tithings' %}" class="nav-link"><i class="fas fa-donate me-2"></i>Members Tithings</a></li>
                     <li><a href="{% url 'expenses' %}" class="nav-link"><i class="fas fa-receipt me-2"></i>Expenses</a></li>
-                </ul>
-            </li>
-
-            <!-- Department Management -->
-            <li>
-                <a href="#" class="dropdown-toggle nav-link" data-bs-toggle="collapse" aria-expanded="false">
-                    <i class="fas fa-sitemap icon"></i>
-                    <span class="link-text">Departments</span>
-                    <i class="fas fa-chevron-down ms-auto" style="font-size: 12px; opacity: 0.7;"></i>
-                </a>
-                <ul class="collapse submenu">
-                    <li><a href="{% url 'departments' %}" class="nav-link"><i class="fas fa-sitemap me-2"></i>Departments</a></li>
+                    <li><a href="#" class="nav-link"><i class="fas fa-receipt me-2"></i>Church Ledger</a></li>
                     <li><a href="{% url 'department-savings' %}" class="nav-link"><i class="fas fa-piggy-bank me-2"></i>Department Savings</a></li>
                 </ul>
             </li>
+
+           
 
             <!-- Church Projects -->
             <li>
@@ -89,25 +72,13 @@
                 </a>
                 <ul class="collapse submenu">
                     <li><a href="{% url 'church-services' %}" class="nav-link"><i class="fas fa-church me-2"></i>Church Services</a></li>
-                    <li><a href="#" class="nav-link"><i class="fas fa-user-check me-2"></i>Attendance</a></li>
+                    <li><a href="{% url 'attendances' %}" class="nav-link"><i class="fas fa-user-check me-2"></i>Attendances</a></li>
                     <li><a href="{% url 'visitors' %}" class="nav-link"><i class="fas fa-user-plus me-2"></i>Visitors</a></li>
                 </ul>
             </li>
 
             <!-- Partnerships -->
-            <li>
-                <a href="#" class="dropdown-toggle nav-link" data-bs-toggle="collapse" aria-expanded="false">
-                    <i class="fas fa-handshake icon"></i>
-                    <span class="link-text">Partnerships</span>
-                    <i class="fas fa-chevron-down ms-auto" style="font-size: 12px; opacity: 0.7;"></i>
-                </a>
-                <ul class="collapse submenu">
-                    <li><a href="#" class="nav-link"><i class="fas fa-users-cog me-2"></i>Partners</a></li>
-                    <li><a href="#" class="nav-link"><i class="fas fa-hand-holding-usd me-2"></i>Partners Contributions</a></li>
-                    <li><a href="#" class="nav-link"><i class="fas fa-handshake me-2"></i>Partners Pledges</a></li>
-                    <li><a href="#" class="nav-link"><i class="fas fa-gift me-2"></i>Donations</a></li>
-                </ul>
-            </li>
+           
 
             <!-- Inventory -->
             <li>
