--- a/templates/projects/contributions/edit_contribution.html
+++ b/templates/projects/contributions/edit_contribution.html
@@ -1,27 +1,15 @@
 <div class="modal fade" id="editContributionModal{{contribution.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5 text-center">Edit Contribution</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-            <form action="{% url 'edit-contribution' %}" method="POST" enctype="multipart/form-data">
+            <form action="#" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="modal-body">
-                    <input type="hidden" value="{{contribution.id}}" name="contribution_id" id="contribution_id" readonly required />
-                <div class="row mb-3">
-                    <div class="col">
-                      <label for="exampleInputPassword1" class="form-label fw-bold">Member</label>
-                      <select class="form-select" id="member" name="member" required>
-                        <option value="{{contribution.member.id}}">{{contribution.member.name}}</option>
-                        {% for member in members %}
-                            {% if member.id != contribution.member.id %}
-                                <option value={{member.id}}>{{member.name}}</option>
-                            {% endif %}
-                         {% endfor %}
-                      </select>
-                    </div>
-                  </div>
+                  <input type="hidden" value="{{contribution.id}}" name="contribution_id" id="contribution_id" readonly required />
+              
   
                 <div class="row mb-2">
                   <div class="col">
