--- a/templates/projects/pledges/edit_pledge.html
+++ b/templates/projects/pledges/edit_pledge.html
@@ -1,29 +1,16 @@
 <div class="modal fade" id="editPledgeModal{{pledge.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5 text-center">Edit Pledge</h1>
+          <h1 class="modal-title fs-5 text-center fw-bold">Edit Pledge</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
             <form action="{% url 'edit-pledge' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="modal-body">
                     <input type="hidden" value="{{pledge.id}}" name="pledge_id" id="pledge_id" readonly required />
+                
                 <div class="row mb-3">
-                    <div class="col">
-                      <label for="exampleInputPassword1" class="form-label fw-bold">Member</label>
-                      <select class="form-select" id="member" name="member" required>
-                        <option value="{{pledge.member.id}}">{{pledge.member.name}}</option>
-                        {% for member in members %}
-                            {% if member.id != pledge.member.id %}
-                                <option value={{member.id}}>{{member.name}}</option>
-                            {% endif %}
-                         {% endfor %}
-                      </select>
-                    </div>
-                  </div>
-  
-                <div class="row mb-2">
                   <div class="col">
                       <label for="exampleInputPassword1" class="form-label fw-bold">Project</label>
                       <select class="form-select" id="project" name="project" required>
@@ -36,7 +23,7 @@
                       </select>
                     </div>
                 </div> 
-                <div class="row mb-2">
+                <div class="row mb-3">
                   <div class="col">
                     <label for="exampleInputPassword1" class="form-label fw-bold">Amount Pledging</label>
                     <input
