--- a/templates/projects/pledges/redeem_pledge.html
+++ b/templates/projects/pledges/redeem_pledge.html
@@ -26,6 +26,7 @@
                       id="amount"
                       name="amount"
                       value="{{pledge.amount}}"
+                      max="{{pledge.balance}}"
                         required
                     />
                   </div>
