--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -26,9 +26,10 @@
                 <tr>
                     <th></th>
                     <th>Name</th>
+                    <th>Type</th>
                     <th>Budget</th>
                     <th>Raised</th>
-                    <th>Date</th>
+                    <th>Status</th>
                     <th></th>
                 </tr>
             </thead>
@@ -37,9 +38,10 @@
                 <tr>
                     <td>{{ forloop.counter }}</td>
                     <td>{{ project.name }}</td>
+                    <td>{{ project.project_type }}</td>
                     <td>{{ project.total_budget }}</td>
                     <td>{{  project.amount_raised}}</td>
-                    <td>{{  project.start_date}} - {{project.end_date}}</td>
+                    <td>{{  project.status}}</td>
                     <td>
                         <div class="d-flex gap-1">
                             <a class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#editProjectModal{{project.id}}"><i class="fas fa-edit"></i></a>
